@@ -27,13 +27,17 @@ javafx {
 
 mainClassName = "gppVis/Viualiser/org.openjfx.MainApp"
 
+//test {
+//  jvmArgs '--illegal-access=debug'
+//}
+
 dependencies {
-  compile 'org.codehaus.groovy:groovy-all:3.0.0-alpha-4'
+  compile 'org.codehaus.groovy:groovy-all:3.0.0-beta-1'
   compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
   compile 'cspforjava:jcsp:1.1.0'
   compile 'groovyJCSP:groovyJCSP:1.1.3'
   compile group: 'junit', name: 'junit', version: '4.12'
-  testCompile 'org.codehaus.groovy:groovy-all:3.0.0-alpha-4'
+  testCompile 'org.codehaus.groovy:groovy-all:3.0.0-beta-1'
   testCompile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
   testCompile 'cspforjava:jcsp:1.1.0'
   testCompile 'groovyJCSP:groovyJCSP:1.1.3'
